[tool.poetry]
name = "moviegoes"
version = "0.1.0"
description = "Make movies from GOES satellite data"
authors = ["leah <leah.bertrand@colorado.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.8"
goes2go = "^2024.7.0"
matplotlib = "~3.10"
numpy = "^2.2.1"
pandas = "^2.2.3"
pillow = "^11.1.0"
s3fs = "^2024.12.0"
xarray = "^2025.1.0"

[tool.poetry.scripts]
moviegoes = "moviegoes.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
